# library_tracker

./: README.md  pyproject.toml
api/base/: router.py  serializers.py  tests.py  views.py
api/versioned/v2/: router.py  serializers.py  views.py
books/: settings.py  urls.py
