[tool.poetry]
name = "book_demo"
version = "0.1.0"
description = ""
authors = ["Sergio Infante"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
